[gd_scene load_steps=12 format=3 uid="uid://dv4jxnbnwewhn"]

[ext_resource type="PackedScene" uid="uid://qr44ahcfpcn5" path="res://Levels/base_level.tscn" id="1_6suex"]
[ext_resource type="PackedScene" uid="uid://7l65j1ha5ckl" path="res://Levels/DungeonTileMap.tscn" id="2_a6bu5"]
[ext_resource type="Script" path="res://Levels/Level4/level_4.gd" id="2_k4p22"]
[ext_resource type="PackedScene" uid="uid://csyp8gq568j4m" path="res://Levels/Level4/crazy_arrow.tscn" id="4_1x3ke"]

[sub_resource type="Curve2D" id="Curve2D_mfb1k"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 386, 148, 0, 0, 0, 0, 226, 147, 0, 0, 0, 0, 74, 46, 0, 0, 0, 0, 80, 146, 0, 0, 0, 0, 512, 141, 0, 0, 0, 0, 513, 141)
}
point_count = 6

[sub_resource type="Curve2D" id="Curve2D_8w0cu"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 634, 139, 0, 0, 0, 0, 306, 135, 0, 0, 0, 0, 641, 140, 0, 0, 0, 0, 641, 160, 0, 0, 0, 0, 645, 44, 0, 0, 0, 0, 641, 157)
}
point_count = 6

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dod7w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6meye"]
size = Vector2(20, 27.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wv7sk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_42ryw"]
size = Vector2(20, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bfqyn"]
size = Vector2(20, 111)

[node name="Level4" instance=ExtResource("1_6suex")]
script = ExtResource("2_k4p22")

[node name="player_start" parent="." index="0"]
position = Vector2(36, 128)

[node name="TileMap" parent="." index="1" instance=ExtResource("2_a6bu5")]
layer_0/tile_data = PackedInt32Array(655360, 196608, 2, 720896, 196608, 2, 786432, 196608, 2, 851968, 196608, 2, 917504, 196608, 3, 983040, 196608, 2, 1048576, 196608, 2, 1114112, 196608, 2, 655361, 196608, 2, 720897, 196608, 2, 786433, 196608, 2, 851969, 196608, 2, 917505, 196608, 2, 983041, 196608, 2, 1048577, 196608, 3, 1114113, 196608, 2, 655362, 196608, 2, 720898, 196608, 3, 786434, 196608, 2, 851970, 196608, 2, 917506, 196608, 2, 983042, 196608, 3, 1048578, 196608, 3, 1114114, 196608, 2, 655363, 196608, 3, 720899, 196608, 3, 786435, 196608, 2, 851971, 196608, 2, 917507, 196608, 3, 983043, 196608, 2, 1048579, 196608, 3, 1114115, 196608, 3, 655364, 196608, 2, 720900, 196608, 2, 786436, 196608, 3, 851972, 196608, 3, 917508, 196608, 2, 983044, 196608, 3, 1048580, 196608, 3, 1114116, 196608, 3, 655365, 196608, 3, 720901, 196608, 2, 786437, 196608, 3, 851973, 196608, 3, 917509, 196608, 3, 983045, 196608, 2, 1048581, 196608, 3, 1114117, 196608, 3, 655366, 196608, 3, 720902, 196608, 2, 786438, 196608, 3, 851974, 196608, 2, 917510, 196608, 2, 983046, 196608, 2, 1048582, 196608, 3, 1114118, 196608, 3, 655367, 196608, 3, 720903, 196608, 2, 786439, 196608, 2, 851975, 196608, 2, 917511, 196608, 2, 983047, 196608, 2, 1048583, 196608, 3, 1114119, 196608, 2, 655368, 196608, 3, 720904, 196608, 2, 786440, 196608, 2, 851976, 196608, 3, 917512, 196608, 3, 983048, 196608, 3, 1048584, 196608, 2, 1114120, 196608, 2, 655369, 196608, 3, 720905, 196608, 2, 786441, 196608, 2, 851977, 196608, 2, 917513, 196608, 3, 983049, 196608, 3, 1048585, 196608, 3, 1114121, 196608, 2, 655370, 196608, 2, 720906, 196608, 2, 786442, 196608, 3, 851978, 196608, 2, 917514, 196608, 2, 983050, 196608, 3, 1048586, 196608, 2, 1114122, 196608, 2, 655371, 196608, 2, 720907, 196608, 3, 786443, 196608, 2, 851979, 196608, 2, 917515, 196608, 2, 983051, 196608, 2, 1048587, 196608, 2, 1114123, 196608, 3, 655372, 196608, 2, 720908, 196608, 3, 786444, 196608, 3, 851980, 196608, 3, 917516, 196608, 3, 983052, 196608, 2, 1048588, 196608, 2, 1114124, 196608, 3, 655373, 196608, 3, 720909, 196608, 2, 786445, 196608, 2, 851981, 196608, 2, 917517, 196608, 3, 983053, 196608, 2, 1048589, 196608, 2, 1114125, 196608, 2, 655374, 196608, 3, 720910, 196608, 3, 786446, 196608, 2, 851982, 196608, 2, 917518, 196608, 2, 983054, 196608, 3, 1048590, 196608, 3, 1114126, 196608, 3, 655375, 196608, 3, 720911, 196608, 3, 786447, 196608, 2, 851983, 196608, 3, 917519, 196608, 3, 983055, 196608, 3, 1048591, 196608, 3, 1114127, 196608, 3, 655376, 196608, 3, 720912, 196608, 2, 786448, 196608, 2, 851984, 196608, 3, 917520, 196608, 2, 983056, 196608, 2, 1048592, 196608, 2, 1114128, 196608, 3, 655377, 196608, 2, 720913, 196608, 2, 786449, 196608, 2, 851985, 196608, 2, 917521, 196608, 2, 983057, 196608, 2, 1048593, 196608, 3, 1114129, 196608, 2, 655378, 196608, 3, 720914, 196608, 2, 786450, 196608, 2, 851986, 196608, 2, 917522, 196608, 2, 983058, 196608, 3, 1048594, 196608, 2, 1114130, 196608, 3, 655379, 196608, 3, 720915, 196608, 3, 786451, 196608, 3, 851987, 196608, 2, 917523, 196608, 2, 983059, 196608, 3, 1048595, 196608, 3, 1114131, 196608, 3, 655380, 196608, 3, 720916, 196608, 2, 786452, 196608, 3, 851988, 196608, 3, 917524, 196608, 2, 983060, 196608, 2, 1048596, 196608, 2, 1114132, 196608, 3, 655381, 196608, 3, 720917, 196608, 3, 786453, 196608, 2, 851989, 196608, 3, 917525, 196608, 2, 983061, 196608, 3, 1048597, 196608, 2, 1114133, 196608, 3, 655382, 196608, 2, 720918, 196608, 3, 786454, 196608, 3, 851990, 196608, 2, 917526, 196608, 3, 983062, 196608, 3, 1048598, 196608, 3, 1114134, 196608, 2, 655383, 196608, 2, 720919, 196608, 3, 786455, 196608, 3, 851991, 196608, 3, 917527, 196608, 3, 983063, 196608, 3, 1048599, 196608, 3, 1114135, 196608, 3, 655384, 196608, 3, 720920, 196608, 2, 786456, 196608, 3, 851992, 196608, 2, 917528, 196608, 3, 983064, 196608, 3, 1048600, 196608, 2, 1114136, 196608, 3, 655385, 196608, 3, 720921, 196608, 3, 786457, 196608, 2, 851993, 196608, 3, 917529, 196608, 3, 983065, 196608, 2, 1048601, 196608, 3, 1114137, 196608, 2, 655386, 196608, 3, 720922, 196608, 3, 786458, 196608, 3, 851994, 196608, 2, 917530, 196608, 3, 983066, 196608, 3, 1048602, 196608, 2, 1114138, 196608, 3, 655387, 196608, 2, 720923, 196608, 3, 786459, 196608, 3, 851995, 196608, 3, 917531, 196608, 3, 983067, 196608, 3, 1048603, 196608, 3, 1114139, 196608, 2, 655388, 196608, 3, 720924, 196608, 3, 786460, 196608, 3, 851996, 196608, 3, 917532, 196608, 2, 983068, 196608, 3, 1048604, 196608, 2, 1114140, 196608, 3, 655389, 196608, 3, 720925, 196608, 2, 786461, 196608, 2, 851997, 196608, 2, 917533, 196608, 3, 983069, 196608, 2, 1048605, 196608, 3, 1114141, 196608, 3, 655390, 196608, 2, 720926, 196608, 3, 786462, 196608, 3, 851998, 196608, 3, 917534, 196608, 3, 983070, 196608, 2, 1048606, 196608, 2, 1114142, 196608, 3, 655391, 196608, 3, 720927, 196608, 2, 786463, 196608, 2, 851999, 196608, 2, 917535, 196608, 2, 983071, 196608, 3, 1048607, 196608, 3, 1114143, 196608, 2, 655392, 196608, 2, 720928, 196608, 3, 786464, 196608, 2, 852000, 196608, 2, 917536, 196608, 3, 983072, 196608, 3, 1048608, 196608, 3, 1114144, 196608, 2, 655393, 196608, 3, 720929, 196608, 3, 786465, 196608, 3, 852001, 196608, 3, 917537, 196608, 3, 983073, 196608, 2, 1048609, 196608, 3, 1114145, 196608, 3, 655394, 196608, 3, 720930, 196608, 2, 786466, 196608, 2, 852002, 196608, 2, 917538, 196608, 2, 983074, 196608, 3, 1048610, 196608, 2, 1114146, 196608, 2, 655395, 196608, 2, 720931, 196608, 3, 786467, 196608, 2, 852003, 196608, 2, 917539, 196608, 3, 983075, 196608, 2, 1048611, 196608, 2, 1114147, 196608, 2, 655396, 196608, 3, 720932, 196608, 3, 786468, 196608, 2, 852004, 196608, 3, 917540, 196608, 3, 983076, 196608, 3, 1048612, 196608, 2, 1114148, 196608, 2, 655397, 196608, 2, 720933, 196608, 3, 786469, 196608, 2, 852005, 196608, 3, 917541, 196608, 2, 983077, 196608, 2, 1048613, 196608, 3, 1114149, 196608, 3, 655398, 196608, 3, 720934, 196608, 2, 786470, 196608, 2, 852006, 196608, 2, 917542, 196608, 2, 983078, 196608, 2, 1048614, 196608, 2, 1114150, 196608, 2, 655399, 196608, 3, 720935, 196608, 3, 786471, 196608, 2, 852007, 196608, 3, 917543, 196608, 3, 983079, 196608, 2, 1048615, 196608, 2, 1114151, 196608, 2, 655400, 196608, 3, 720936, 196608, 2, 786472, 196608, 2, 852008, 196608, 3, 917544, 196608, 2, 983080, 196608, 3, 1048616, 196608, 3, 1114152, 196608, 2, 655401, 196608, 3, 720937, 196608, 2, 786473, 196608, 2, 852009, 196608, 2, 917545, 196608, 3, 983081, 196608, 2, 1048617, 196608, 2, 1114153, 196608, 3, 655402, 196608, 3, 720938, 196608, 3, 786474, 196608, 3, 852010, 196608, 3, 917546, 196608, 2, 983082, 196608, 3, 1048618, 196608, 3, 1114154, 196608, 2, 655403, 196608, 3, 720939, 196608, 2, 655404, 196608, 3, 720940, 196608, 2, 655405, 196608, 2, 720941, 196608, 2, 0, 196608, 2, 65536, 196608, 2, 131072, 196608, 3, 1, 196608, 2, 65537, 196608, 3, 131073, 196608, 2, 2, 196608, 3, 65538, 196608, 2, 131074, 196608, 2, 3, 196608, 2, 65539, 196608, 3, 131075, 196608, 2, 4, 196608, 2, 65540, 196608, 2, 131076, 196608, 2, 5, 196608, 3, 65541, 196608, 3, 131077, 196608, 3, 6, 196608, 3, 65542, 196608, 3, 131078, 196608, 3, 7, 196608, 2, 65543, 196608, 3, 131079, 196608, 3, 8, 196608, 2, 65544, 196608, 3, 131080, 196608, 3, 9, 196608, 2, 65545, 196608, 3, 131081, 196608, 2, 10, 196608, 3, 65546, 196608, 3, 131082, 196608, 3, 11, 196608, 3, 65547, 196608, 2, 131083, 196608, 2, 12, 196608, 2, 65548, 196608, 3, 131084, 196608, 2, 13, 196608, 3, 65549, 196608, 3, 131085, 196608, 2, 14, 196608, 2, 65550, 196608, 3, 131086, 196608, 3, 15, 196608, 2, 65551, 196608, 2, 131087, 196608, 3, 16, 196608, 2, 65552, 196608, 3, 131088, 196608, 2, 17, 196608, 2, 65553, 196608, 3, 131089, 196608, 2, 18, 196608, 3, 65554, 196608, 2, 131090, 196608, 3, 19, 196608, 2, 65555, 196608, 2, 131091, 196608, 3, 20, 196608, 2, 65556, 196608, 2, 131092, 196608, 3, 21, 196608, 3, 65557, 196608, 3, 131093, 196608, 2, 22, 196608, 3, 65558, 196608, 2, 131094, 196608, 2, 23, 196608, 2, 65559, 196608, 3, 131095, 196608, 2, 24, 196608, 2, 65560, 196608, 3, 131096, 196608, 3, 25, 196608, 3, 65561, 196608, 2, 131097, 196608, 3, 26, 196608, 2, 65562, 196608, 2, 131098, 196608, 3, 27, 196608, 3, 65563, 196608, 3, 131099, 196608, 2, 28, 196608, 3, 65564, 196608, 3, 131100, 196608, 2, 29, 196608, 3, 65565, 196608, 2, 131101, 196608, 2, 30, 196608, 3, 65566, 196608, 2, 131102, 196608, 2, 31, 196608, 2, 65567, 196608, 3, 131103, 196608, 2, 32, 196608, 3, 65568, 196608, 3, 131104, 196608, 3, 33, 196608, 2, 65569, 196608, 2, 131105, 196608, 3, 34, 196608, 3, 65570, 196608, 2, 131106, 196608, 2, 35, 196608, 3, 65571, 196608, 3, 131107, 196608, 3, 36, 196608, 3, 65572, 196608, 3, 131108, 196608, 3, 37, 196608, 3, 65573, 196608, 2, 131109, 196608, 2, 38, 196608, 2, 65574, 196608, 3, 131110, 196608, 2, 39, 196608, 3, 65575, 196608, 3, 131111, 196608, 3, 40, 196608, 3, 65576, 196608, 3, 131112, 196608, 2, 41, 196608, 3, 65577, 196608, 2, 131113, 196608, 3, 42, 196608, 3, 65578, 196608, 3, 131114, 196608, 2, 43, 196608, 2, 65579, 196608, 3, 131115, 196608, 2, 44, 196608, 3, 65580, 196608, 3, 131116, 196608, 3, 45, 196608, 2, 65581, 196608, 2, 131117, 196608, 2, 46, 196608, 2, 65582, 196608, 3, 131118, 196608, 3, 47, 196608, 3, 65583, 196608, 3, 131119, 196608, 3, 48, 196608, 3, 65584, 196608, 2, 131120, 196608, 2, 49, 196608, 2, 65585, 196608, 2, 131121, 196608, 2, 50, 196608, 2, 65586, 196608, 3, 131122, 196608, 3, 51, 196608, 3, 65587, 196608, 3, 131123, 196608, 3, 655411, 196608, 3, 720947, 196608, 2, 786483, 196608, 3, 852019, 196608, 2, 917555, 196608, 2, 983091, 196608, 3, 1048627, 196608, 3, 1114163, 196608, 3, 1179699, 196608, 3, 1245235, 196608, 2, 1310771, 196608, 3, 1376307, 196608, 3, 1441843, 196608, 2, 1507379, 196608, 3, 1572915, 196608, 2, 1638451, 196608, 2, 1703987, 196608, 3, 1769523, 196608, 2, 52, 196608, 3, 65588, 196608, 3, 131124, 196608, 3, 655412, 196608, 3, 720948, 196608, 3, 786484, 196608, 3, 852020, 196608, 2, 917556, 196608, 2, 983092, 196608, 2, 1048628, 196608, 2, 1114164, 196608, 3, 1179700, 196608, 3, 1245236, 196608, 3, 1310772, 196608, 2, 1376308, 196608, 2, 1441844, 196608, 3, 1507380, 196608, 2, 1572916, 196608, 3, 1638452, 196608, 3, 1703988, 196608, 2, 1769524, 196608, 2, 53, 196608, 2, 65589, 196608, 2, 131125, 196608, 2, 655413, 196608, 2, 720949, 196608, 3, 786485, 196608, 2, 852021, 196608, 3, 917557, 196608, 2, 983093, 196608, 3, 1048629, 196608, 2, 1114165, 196608, 2, 1179701, 196608, 2, 1245237, 196608, 3, 1310773, 196608, 2, 1376309, 196608, 3, 1441845, 196608, 3, 1507381, 196608, 3, 1572917, 196608, 3, 1638453, 196608, 2, 1703989, 196608, 3, 1769525, 196608, 3, 54, 196608, 2, 65590, 196608, 2, 131126, 196608, 2, 655414, 196608, 3, 720950, 196608, 3, 786486, 196608, 3, 852022, 196608, 3, 917558, 196608, 2, 983094, 196608, 3, 1048630, 196608, 3, 1114166, 196608, 2, 1179702, 196608, 2, 1245238, 196608, 2, 1310774, 196608, 3, 1376310, 196608, 3, 1441846, 196608, 2, 1507382, 196608, 2, 1572918, 196608, 3, 1638454, 196608, 2, 1703990, 196608, 3, 1769526, 196608, 2, 55, 196608, 2, 65591, 196608, 3, 131127, 196608, 2, 655415, 196608, 2, 720951, 196608, 3, 786487, 196608, 3, 852023, 196608, 2, 917559, 196608, 2, 983095, 196608, 2, 1048631, 196608, 2, 1114167, 196608, 2, 1179703, 196608, 3, 1245239, 196608, 3, 1310775, 196608, 2, 1376311, 196608, 3, 1441847, 196608, 2, 1507383, 196608, 2, 1572919, 196608, 2, 1638455, 196608, 3, 1703991, 196608, 3, 1769527, 196608, 2, 56, 196608, 2, 65592, 196608, 2, 131128, 196608, 3, 655416, 196608, 3, 720952, 196608, 2, 786488, 196608, 2, 852024, 196608, 3, 917560, 196608, 3, 983096, 196608, 3, 1048632, 196608, 2, 1114168, 196608, 3, 1179704, 196608, 3, 1245240, 196608, 2, 1310776, 196608, 3, 1376312, 196608, 3, 1441848, 196608, 2, 1507384, 196608, 3, 1572920, 196608, 3, 1638456, 196608, 2, 1703992, 196608, 2, 1769528, 196608, 2, 57, 196608, 2, 65593, 196608, 2, 131129, 196608, 2, 655417, 196608, 2, 720953, 196608, 3, 786489, 196608, 3, 852025, 196608, 2, 917561, 196608, 3, 983097, 196608, 3, 1048633, 196608, 2, 1114169, 196608, 2, 1179705, 196608, 3, 1245241, 196608, 3, 1310777, 196608, 2, 1376313, 196608, 2, 1441849, 196608, 2, 1507385, 196608, 3, 1572921, 196608, 3, 1638457, 196608, 3, 1703993, 196608, 2, 1769529, 196608, 2, 58, 196608, 2, 65594, 196608, 3, 131130, 196608, 2, 655418, 196608, 2, 720954, 196608, 3, 786490, 196608, 2, 852026, 196608, 2, 917562, 196608, 2, 983098, 196608, 2, 1048634, 196608, 2, 1114170, 196608, 2, 1179706, 196608, 2, 1245242, 196608, 2, 1310778, 196608, 2, 1376314, 196608, 3, 1441850, 196608, 3, 1507386, 196608, 3, 1572922, 196608, 2, 1638458, 196608, 2, 1703994, 196608, 3, 1769530, 196608, 3, 655406, 196608, 2, 720942, 196608, 3, 655407, 196608, 3, 720943, 196608, 2, 655408, 196608, 2, 720944, 196608, 2, 655409, 196608, 2, 720945, 196608, 3, 786481, 196608, 3, 852017, 196608, 3, 917553, 196608, 2, 983089, 196608, 3, 1048625, 196608, 2, 1114161, 196608, 2, 1179697, 196608, 2, 655410, 196608, 3, 720946, 196608, 3, 786482, 196608, 3, 852018, 196608, 2, 917554, 196608, 3, 983090, 196608, 2, 1048626, 196608, 3, 1114162, 196608, 2, 1179698, 196608, 2, 458759, 196608, 3, 458760, 196608, 3, 458761, 196608, 2, 458762, 196608, 3, 458763, 196608, 2, 458764, 196608, 3, 458765, 196608, 2, 720895, 196608, 2, 655359, 196608, 2, 589823, 196608, 2, 524287, 196608, 2, 458751, 196608, 2, 393215, 196608, 2, 327679, 196608, 2, 262143, 196608, 2, 196607, 196608, 2, 589882, 196608, 2, 524346, 196608, 2, 458810, 196608, 2, 393274, 196608, 2, 327738, 196608, 2, 262202, 196608, 2, 196666, 196608, 2, 1114155, 196608, 2, 1114156, 196608, 2, 1114157, 196608, 2, 1114158, 196608, 2, 1114159, 196608, 2, 1114160, 196608, 2)

[node name="ColorRect" type="ColorRect" parent="." index="2"]
z_index = -5
offset_left = -8.0
offset_top = -99.0
offset_right = 1649.0
offset_bottom = 916.0
color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="Path2D" type="Path2D" parent="." index="3"]
curve = SubResource("Curve2D_mfb1k")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D" index="0"]
position = Vector2(386, 148)
rotation = -3.13534

[node name="CrazyArrow" parent="Path2D/PathFollow2D" index="0" instance=ExtResource("4_1x3ke")]

[node name="Path2D2" type="Path2D" parent="." index="4"]
curve = SubResource("Curve2D_8w0cu")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D2" index="0"]
position = Vector2(634, 139)
rotation = -3.1294

[node name="CrazyArrow" parent="Path2D2/PathFollow2D" index="0" instance=ExtResource("4_1x3ke")]

[node name="triggers" type="Node2D" parent="." index="5"]

[node name="c1" type="Area2D" parent="triggers" index="0"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/c1" index="0"]
position = Vector2(182, 146)
shape = SubResource("RectangleShape2D_dod7w")

[node name="c2" type="Area2D" parent="triggers" index="1"]
position = Vector2(-28, -44)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/c2" index="0"]
position = Vector2(182, 146)
shape = SubResource("RectangleShape2D_dod7w")

[node name="c3" type="Area2D" parent="triggers" index="2"]
position = Vector2(75, 2)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/c3" index="0"]
position = Vector2(190, 143.75)
shape = SubResource("RectangleShape2D_6meye")

[node name="c4" type="Area2D" parent="triggers" index="3"]
position = Vector2(75, 2)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/c4" index="0"]
position = Vector2(322, 141)
shape = SubResource("RectangleShape2D_wv7sk")

[node name="c5" type="Area2D" parent="triggers" index="4"]
position = Vector2(75, 2)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/c5" index="0"]
position = Vector2(320, 99)
shape = SubResource("RectangleShape2D_42ryw")

[node name="c6" type="Area2D" parent="triggers" index="5"]
position = Vector2(75, 2)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/c6" index="0"]
position = Vector2(566, 100.5)
shape = SubResource("RectangleShape2D_bfqyn")

[node name="c9" type="Area2D" parent="triggers" index="6"]
position = Vector2(222, 2)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/c9" index="0"]
position = Vector2(592, 101)
shape = SubResource("RectangleShape2D_bfqyn")

[node name="c10" type="Area2D" parent="triggers" index="7"]
position = Vector2(222, 2)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/c10" index="0"]
position = Vector2(464, 101)
shape = SubResource("RectangleShape2D_bfqyn")

[node name="c11" type="Area2D" parent="triggers" index="8"]
position = Vector2(235, 167)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/c11" index="0"]
position = Vector2(502, 101)
rotation = 1.61079
shape = SubResource("RectangleShape2D_bfqyn")

[node name="c7" type="Area2D" parent="triggers" index="9"]
position = Vector2(-322, -52)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/c7" index="0"]
position = Vector2(554, 141)
shape = SubResource("RectangleShape2D_42ryw")

[node name="c8" type="Area2D" parent="triggers" index="10"]
position = Vector2(-322, -74)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="triggers/c8" index="0"]
position = Vector2(554, 141)
shape = SubResource("RectangleShape2D_42ryw")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="triggers/c8" index="1"]
position = Vector2(574, 163)
shape = SubResource("RectangleShape2D_42ryw")

[node name="Positions" type="Node2D" parent="." index="6"]

[node name="Marker2D" type="Marker2D" parent="Positions" index="0"]
position = Vector2(376, 121)

[node name="Marker2D2" type="Marker2D" parent="Positions" index="1"]
position = Vector2(393, 121)

[node name="Marker2D3" type="Marker2D" parent="Positions" index="2"]
position = Vector2(410, 120)

[node name="Marker2D4" type="Marker2D" parent="Positions" index="3"]
position = Vector2(426, 120)

[node name="Marker2D5" type="Marker2D" parent="Positions" index="4"]
position = Vector2(443, 121)

[node name="Marker2D6" type="Marker2D" parent="Positions" index="5"]
position = Vector2(456, 121)

[node name="Positions2" type="Node2D" parent="." index="7"]
position = Vector2(319, 44)

[node name="Marker2D" type="Marker2D" parent="Positions2" index="0"]
position = Vector2(376, 121)

[node name="Marker2D2" type="Marker2D" parent="Positions2" index="1"]
position = Vector2(393, 121)

[node name="Marker2D3" type="Marker2D" parent="Positions2" index="2"]
position = Vector2(410, 120)

[node name="Marker2D4" type="Marker2D" parent="Positions2" index="3"]
position = Vector2(408, 140)

[node name="Marker2D5" type="Marker2D" parent="Positions2" index="4"]
position = Vector2(393, 140)

[node name="Marker2D6" type="Marker2D" parent="Positions2" index="5"]
position = Vector2(376, 140)

[node name="Positions3" type="Node2D" parent="." index="8"]
position = Vector2(366, 44)

[node name="Marker2D" type="Marker2D" parent="Positions3" index="0"]
position = Vector2(376, 121)

[node name="Marker2D2" type="Marker2D" parent="Positions3" index="1"]
position = Vector2(393, 121)

[node name="Marker2D3" type="Marker2D" parent="Positions3" index="2"]
position = Vector2(410, 120)

[node name="Marker2D4" type="Marker2D" parent="Positions3" index="3"]
position = Vector2(408, 140)

[node name="Marker2D5" type="Marker2D" parent="Positions3" index="4"]
position = Vector2(393, 140)

[node name="Marker2D6" type="Marker2D" parent="Positions3" index="5"]
position = Vector2(376, 140)

[connection signal="body_entered" from="triggers/c1" to="." method="_on_c_1_body_entered"]
[connection signal="body_entered" from="triggers/c2" to="." method="_on_c_2_body_entered"]
[connection signal="body_entered" from="triggers/c3" to="." method="_on_c_3_body_entered"]
[connection signal="body_entered" from="triggers/c4" to="." method="_on_c_4_body_entered"]
[connection signal="body_entered" from="triggers/c5" to="." method="_on_c_5_body_entered"]
[connection signal="body_entered" from="triggers/c6" to="." method="_on_c_6_body_entered"]
[connection signal="body_entered" from="triggers/c9" to="." method="_on_c_9_body_entered"]
[connection signal="body_entered" from="triggers/c10" to="." method="_on_c_10_body_entered"]
[connection signal="body_entered" from="triggers/c11" to="." method="_on_c_11_body_entered"]
[connection signal="body_entered" from="triggers/c7" to="." method="_on_c_7_body_entered"]
[connection signal="body_entered" from="triggers/c8" to="." method="_on_c_7_body_entered"]
